--- a/node/pom.xml
+++ b/node/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dispatcher</artifactId>
+    <artifactId>node</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -38,6 +38,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+
+
     </dependencies>
 
 </project>
