--- a/refuel-service/pom.xml
+++ b/refuel-service/pom.xml
@@ -44,6 +44,18 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>ru.antisessa</groupId>
+            <artifactId>common-jpa</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.antisessa</groupId>
+            <artifactId>common-exceptionUtils</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
