--- a/common-jpa/pom.xml
+++ b/common-jpa/pom.xml
@@ -38,6 +38,12 @@
             <version>3.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots-spring-boot-starter</artifactId>
+            <version>${telegrambot.starter.version}</version>
+        </dependency>
+
     </dependencies>
 
 </project>
