rewrite /find_one_car, adding same command with full info, restructure project - delete interface pattern, starting coverage project with tests

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>common-jpa</module>
         <module>refuel-service</module>
         <module>common-exceptionUtils</module>
+        <module>testModule</module>
     </modules>
 
     <properties>
